# esp32_nat_router_extended

./: .gitignore  ESP32_S3_Board_Pin_Map.csv
components/cmd_router/: router_globals.h
components/tft_display/: CMakeLists.txt  traffic_stats.c  ui_screens.c  ui_screens.h
src/: CMakeLists.txt  esp32_nat_router.c
src/tft_display/: tft_display.c  tft_display.h  traffic_stats.c  traffic_stats.h  ui_screens.c
